  watched player. The next time the camera doesn't know what to watch, your favorite
  will be selected.
- Players leaving to spectator mode with <0.2.8.2 clients are handled like
  spectators of 0.2.8.2 clients: they stay visible to the others.
- Kick statistics are now persistent across server runs.
- MESSAGE_OF_DAY is now displayed fullscreen if both server and client support it
- Manual fullscreen messages can be triggered with 
  FULLSCREEN_MESSAGE <timeout> <message content>
- Axes Indicators by meriton, can be enabled using the AXES_INDICATORS
  setting.

  Bugfixes:
- Fixed various trail end related extrapolation/simulation inaccuracies that looked
  like lag.
- When extrapolating, the game's sensors never detected own or teammates' walls,
  it mistook them for enemy walls.
- The acceleration and boost system always used settings for enemy walls instead of
  settings for team players' walls. That means that old clients connecting to a
  0.2.8.3+ server that has CYCLE_ACCEL_ENEMY and CYCLE_ACCEL_TEAM set to different
  values experience syncing problems. The default behavior therefore is to lock 0.2.8.2
  and earlier out of your server if you set one of them away from the default. 
  If you want to set both accelerations away from the default, but to the same value,
  there won't be a compatibility problem; in that case, set CYCLE_ACCEL_ENEMY_OVERRIDE
  and CYCLE_ACCEL_TEAM_OVERRIDE to 0 and old clients will be allowed in. However, you
  should manually lock out players with 0.2.7 clients, for example by modifying
  CYCLE_ACCEL_RIM a tiny bit.
- "Team Red" bug. If the server allows maximally two teams, no team ever
  gets to be Team Red.
- Phasing made even more difficult; nice side effect of the fix is
  reduced network bandwidth usage.
- Speed gauge resets between rounds.
- More accurate Lag-O-Meter by meriton.

  Internals:
- A complete netsync cycle is now sn_Receive(); nNetObject::SyncAll(); sn_SendPlanned();.

Changes since 0.2.8.1: